@@ -40,7 +40,7 @@ public class HollowWriteStateCreatorTest {
         HollowWriteStateEngine writeEngine = new HollowWriteStateEngine();
 
         HollowObjectMapper mapper = new HollowObjectMapper(writeEngine);
-        mapper.add(new Integer(1));
+        mapper.add(Integer.valueOf(1));
         writeEngine.addHeaderTag("CopyTag", "copied");
         writeEngine.addHeaderTag(HEADER_TAG_METRIC_CYCLE_START, String.valueOf(System.currentTimeMillis()));
         String toVersion = String.valueOf(System.currentTimeMillis());
@@ -65,7 +65,7 @@ public class HollowWriteStateCreatorTest {
         HollowWriteStateEngine writeEngine = new HollowWriteStateEngine();
         HollowObjectMapper mapper = new HollowObjectMapper(writeEngine);
         
-        mapper.add(new Integer(1));
+        mapper.add(Integer.valueOf(1));
         
         HollowReadStateEngine readEngine = StateEngineRoundTripper.roundTripSnapshot(writeEngine);
         
@@ -80,8 +80,8 @@ public class HollowWriteStateCreatorTest {
         HollowWriteStateEngine writeEngine = new HollowWriteStateEngine();
         HollowObjectMapper mapper = new HollowObjectMapper(writeEngine);
         
-        mapper.add(new Integer(1));
-        mapper.add(new Integer(2));
+        mapper.add(Integer.valueOf(1));
+        mapper.add(Integer.valueOf(2));
         
         HollowReadStateEngine readEngine = StateEngineRoundTripper.roundTripSnapshot(writeEngine);
         
@@ -125,7 +125,7 @@ public class HollowWriteStateCreatorTest {
         
         repopulatedWriteStateEngine.prepareForNextCycle();
         repopulatedWriteStateEngine.addAllObjectsFromPreviousCycle();
-        new HollowObjectMapper(repopulatedWriteStateEngine).add(new Integer(3));
+        new HollowObjectMapper(repopulatedWriteStateEngine).add(Integer.valueOf(3));
         HollowReadStateEngine recreatedReadEngine = StateEngineRoundTripper.roundTripSnapshot(repopulatedWriteStateEngine);
 
         HollowObjectSchema schema = (HollowObjectSchema)recreatedReadEngine.getSchema("Integer");
@@ -148,8 +148,8 @@ public class HollowWriteStateCreatorTest {
         HollowWriteStateEngine writeEngine = new HollowWriteStateEngine();
         HollowObjectMapper mapper = new HollowObjectMapper(writeEngine);
         
-        mapper.add(new Integer(1));
-        mapper.add(new Integer(2));
+        mapper.add(Integer.valueOf(1));
+        mapper.add(Integer.valueOf(2));
         
         HollowReadStateEngine readEngine = StateEngineRoundTripper.roundTripSnapshot(writeEngine);
 
